# SimpleScreenshot

./: .gitignore  CMakeLists.txt  README.md  build-win.sh  build.sh
include/Screenshot/: Screenshot.h  ScreenshotImpl.h  ScreenshotLinux.h  ScreenshotWin32.h
src/: Screenshot.cpp  ScreenshotLinux.cpp  ScreenshotWin32.cpp
tests/: CMakeLists.txt  ScreenshotTest.cpp
